# segment-tree

./: .gitignore  CMakeLists.txt  Makefile  Node.cpp  Node.h  README.md  Root.cpp  Root.h  main.cpp
srcs/: Node.cpp  Root.cpp  main.cpp  tests.cpp
